Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130880

QMLLS crashes repeatedly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.8.1, 6.8, 6.9.0 FF
    • 6.8
    • QML: Tooling
    • None
    • 443a6354d (dev), 1563542fb (6.8)

      QMLLS: qmlls-macos-nightly-20241101

      Project: https://git.qt.io/olwolff/awesome-ping-pong-scoreboard/-/merge_requests/21?commit_id=7dc30dd2166ef6ed69bbae4116b3e9defbd5d4c8

      (when I switch back to f9b43f2 the crashing stops)

      IDE: VSCode with Qt Qml Extension

      qt.languageserver.server: Did Setup
      Using the build directories found in the .qmlls.ini file. Your build folder might not be found if no .qmlls.ini files are present in the root source folder.
      qt.languageserver.server: "registration of file udates failed, will miss file changes done outside the editor due to error -32603 Request client/registerCapability failed with message: No feature implementation for workspace.didChangeWatchedFiles found. Registration failed."
      [Warn  - 11:01:56] registration of file udates failed, will miss file changes done outside the editor due to error -32603 Request client/registerCapability failed with message: No feature implementation for workspace.didChangeWatchedFiles found. Registration failed.
      [Dom] Warning: Failed to find main qmldir file for QtQuick.Controls.Material  in /Users/runner/work/_temp/install_dir/qml.
      [Dom] Warning: Failed to find main qmldir file for QtQuick  in /Users/runner/work/_temp/install_dir/qml.
      [Dom] Warning: Failed to find main qmldir file for QtQuick.Controls  in /Users/runner/work/_temp/install_dir/qml.
      [Dom] Warning: Failed to find main qmldir file for QtQuick  in /Users/runner/work/_temp/install_dir/qml.
      [Dom] Warning: Failed to find main qmldir file for QtQml  in /Users/runner/work/_temp/install_dir/qml.
      [Dom] Warning: Failed to find main qmldir file for QtQuick  in /Users/runner/work/_temp/install_dir/qml.
      [Dom] Warning: Failed to find main qmldir file for QtCore  in /Users/runner/work/_temp/install_dir/qml.
      [Dom] Warning: Failed to find main qmldir file for QtQuick  in /Users/runner/work/_temp/install_dir/qml.
      [Dom] Warning: Failed to find main qmldir file for QtQuick.Particles  in /Users/runner/work/_temp/install_dir/qml.
      [Dom] Warning: Failed to find main qmldir file for QtQuick.Controls.Material  in /Users/runner/work/_temp/install_dir/qml.
      [Dom] Warning: Failed to find main qmldir file for QtQuick  in /Users/runner/work/_temp/install_dir/qml.
      [Dom] Warning: Failed to find main qmldir file for QtQuick.Controls  in /Users/runner/work/_temp/install_dir/qml.
      [Dom] Warning: Failed to find main qmldir file for QtQuick.Layouts  in /Users/runner/work/_temp/install_dir/qml.
      [Dom] Warning: Failed to find main qmldir file for QtQuick.VirtualKeyboard  in /Users/runner/work/_temp/install_dir/qml.
      qt.languageserver.semanticTokens: "Semantic token for 0 has not been implemented yet"
      [Error - 11:01:59] Server process exited with signal SIGTRAP.
      [Info  - 11:01:59] Connection to server got closed. Server will restart.
      true
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            semih.yavuz Semih Yavuz
            madwinter Marcus Tillmanns
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes