qmlls: fix qmlls crash

We might hit in default case, remove the unreachable return macro.
Otherwise, it crashes.

Pick-to: 6.8
Fixes: QTBUG-130880
Change-Id: I6cf568790e757ec5e65d3c380635cbd70191a227
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>